# localgpt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  GEMINI.md  README.md  config.example.toml  deny.toml  docusaurus.config.ts  package-lock.json  sidebars.ts  update.sh
.github/: copilot-instructions.md
.github/copilot/: setup-steps.yml
apps/android/: README.md
apps/ios/: README.md
apps/ios/LocalGPT/: Info.plist  LocalGPTApp.swift
apps/ios/LocalGPT.xcodeproj/: project.pbxproj
blog/: 2023-03-19.md  2024-01-15-introducing-localgpt.md  authors.yml
bridges/cli/: Cargo.toml
bridges/cli/src/: main.rs
bridges/discord/: Cargo.toml
bridges/discord/src/: main.rs
bridges/telegram/: Cargo.toml
bridges/telegram/src/: main.rs
bridges/whatsapp/: Cargo.toml
bridges/whatsapp/src/: main.rs
crates/bridge/: Cargo.toml
crates/bridge-discord/: Cargo.toml
crates/bridge-telegram/: Cargo.toml
crates/bridge-telegram/src/: main.rs
crates/bridge/src/: lib.rs  peer_identity.rs  protocol.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  (+1 more)
crates/core/: Cargo.toml
crates/mobile/: Cargo.toml
crates/mobile-ffi/: Cargo.toml
crates/mobile/android/scripts/: build_android.sh
crates/mobile/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: http.rs  lib.rs  openai_compat.rs  rate_limiter.rs  telegram.rs
crates/server/src/security/: bridge.rs  mod.rs
crates/server/src/web/: app.rs
crates/server/ui/: app.js
docs/: apple-foundation-models.md  architecture.md  bridge-development.md  cli-chat.md  cli-commands.md  cli-daemon.md  configuration.md  http-api.md  installation.md  intro.md  localgpt.md  memory-system.md  quick-start.md  sandbox.md  security-policy.md  tools.md  web-search.md
src/: lib.rs  main.rs
src/agent/: mod.rs  providers.rs  session.rs
src/cli/: chat.rs  daemon.rs  gen3d.rs  mod.rs
src/config/: mod.rs
src/desktop/: worker.rs
src/gen3d/: plugin.rs
src/memory/: mod.rs  watcher.rs  workspace.rs
src/pages/: index.tsx
src/server/: http.rs  telegram.rs
(+75 files in other folders)
